@@ -15,12 +15,12 @@
  */
 package me.champeau.a4j.jsolex.processing.expr.impl;
 
+import me.champeau.a4j.jsolex.expr.BuiltinFunction;
 import me.champeau.a4j.jsolex.processing.stretching.ArcsinhStretchingStrategy;
 import me.champeau.a4j.jsolex.processing.stretching.LinearStrechingStrategy;
 import me.champeau.a4j.jsolex.processing.sun.Broadcaster;
 import me.champeau.a4j.jsolex.processing.util.Constants;
 
-import java.util.List;
 import java.util.Map;
 
 public class Stretching extends AbstractFunctionImpl {
@@ -29,28 +29,17 @@ public class Stretching extends AbstractFunctionImpl {
         super(context, broadcaster);
     }
 
-    public Object asinhStretch(List<Object> arguments) {
-        if (arguments.size() < 3) {
-            throw new IllegalArgumentException("asinh_stretch takes 3 arguments (image(s), blackpoint, stretch)");
-        }
-        float blackpoint = floatArg(arguments, 1);
-        float stretch = floatArg(arguments, 2);
-        return monoToMonoImageTransformer( "asinh_stretch", 3, arguments, image -> new ArcsinhStretchingStrategy(blackpoint, stretch, stretch).stretch(image));
+    public Object asinhStretch(Map<String, Object> arguments) {
+        BuiltinFunction.ASINH_STRETCH.validateArgs(arguments);
+        float blackpoint = floatArg(arguments, "bp", 0);
+        float stretch = floatArg(arguments, "strech", 1);
+        return monoToMonoImageTransformer("asinh_stretch", "img", arguments, image -> new ArcsinhStretchingStrategy(blackpoint, stretch, stretch).stretch(image));
     }
 
-    public Object linearStretch(List<Object> arguments) {
-        if (arguments.size() != 1 && arguments.size() != 3) {
-            throw new IllegalArgumentException("linear_stretch takes 3 arguments (image(s), lo, hi)");
-        }
-        float lo;
-        float hi;
-        if (arguments.size() == 3) {
-            lo = Math.min(Constants.MAX_PIXEL_VALUE, Math.max(0, floatArg(arguments, 1)));
-            hi = Math.min(Constants.MAX_PIXEL_VALUE, Math.max(0, floatArg(arguments, 2)));
-        } else {
-            hi = Constants.MAX_PIXEL_VALUE;
-            lo = 0;
-        }
-        return monoToMonoImageTransformer("linear_stretch", 3, arguments, image -> new LinearStrechingStrategy(lo, hi).stretch(image));
+    public Object linearStretch(Map<String, Object> arguments) {
+        BuiltinFunction.LINEAR_STRETCH.validateArgs(arguments);
+        float lo = Math.clamp(floatArg(arguments, "lo", 0), 0, Constants.MAX_PIXEL_VALUE);
+        float hi = Math.clamp(floatArg(arguments, "hi", Constants.MAX_PIXEL_VALUE), 0, Constants.MAX_PIXEL_VALUE);
+        return monoToMonoImageTransformer("linear_stretch", "img", arguments, image -> new LinearStrechingStrategy(lo, hi).stretch(image));
     }
 }
